[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/App_Icon.gd" type="Script" id=1]
[ext_resource path="res://elements/highlight_box.tres" type="StyleBox" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="App_Icon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1644.0
margin_bottom = -760.0
rect_min_size = Vector2( 256, 300 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="highlight" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 35.1617
margin_right = 75.0
margin_bottom = 185.162
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 150 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -99.0
margin_right = -13.0
margin_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
text = "App Name"
align = 1
valign = 2
autowrap = true
[connection signal="gui_input" from="." to="." method="_on_App_Icon_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_App_Icon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_App_Icon_mouse_exited"]
